crates/ink/tests/ui/contract/fail/trait-message-selector-mismatch.stderr
error: an inner attribute is not permitted in this context
  --> tests/ui/contract/fail/trait-message-selector-mismatch.rs:7:1
   |
7  |   #![allow(unexpected_cfgs)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
10 | / mod contract {
11 | |     use super::TraitDefinition;
12 | |
13 | |     #[ink(storage)]
...  |
27 | | }
   | |_- the inner attribute doesn't annotate this module
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files
help: to annotate the module, change the attribute from inner to outer style
   |
7  - #![allow(unexpected_cfgs)]
7  + #[allow(unexpected_cfgs)]
   |

warning: unexpected `cfg` condition value: `ink-as-dependency`
 --> tests/ui/contract/fail/trait-message-selector-mismatch.rs:9:1
  |
9 | #[ink::contract]
  | ^^^^^^^^^^^^^^^^
  |
  = note: expected values for `feature` are: `default`, `ink-debug`, `no-allocator`, `no-panic-handler`, `scale-info`, `show-codegen-docs`, `std`, and `test_instantiate`
  = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
  = help: try referring to `ink::contract` crate for guidance on how handle this unexpected cfg
  = help: the attribute macro `ink::contract` may come from an old version of the `ink_macro` crate, try updating your dependency with `cargo update -p ink_macro`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: `#[warn(unexpected_cfgs)]` on by default
  = note: this warning originates in the attribute macro `ink::contract` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/contract/fail/trait-message-selector-mismatch.rs:25:9
   |
25 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^ expected `1`, found `2`
   |
   = note: expected struct `TraitMessageSelector<1>`
              found struct `TraitMessageSelector<2>`
